--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile 'com.github.vacxe:phonemask:1.0.4'
     compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
+    compile 'com.google.code.gson:gson:2.8.1'
 
     testCompile 'junit:junit:4.12'
 }
