--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -37,4 +38,6 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.google.android.gms:play-services:10.2.6'
+    compile 'com.android.support:multidex:1.0.1'
 }
